syntax = "proto3";
package pb;

service Vinna {
    // NewTopic will create a new topic for messages
    rpc NewTopic(Topic) returns (TopicCreated) {}
    // Add a message to vinna
    rpc Add(Message) returns (Success) {}
    // Take a message from vinna
    rpc Take(MessageRequest) returns (Message) {}
    // Produce will open up a production stream of data
    rpc Produce(stream Message) returns (ProducerSummary) {}
    // Consumer will be an endpoint for streaming data to a client side consumer
    rpc Consume(ConsumeRequest) returns (stream Message) {}
}

message Topic {
    string topic = 1;
}

message TopicCreated {
    bool success = 1;
}

message Message {
    string uuid = 1;
    string topic = 2;
    bytes msg = 3;
}

message Success {
    string msgID = 1;
    bool success = 2;
}

message MessageRequest {
    string topic = 1;
    string msgID = 2;
}

message ProducerSummary {
    int32 msgCount = 1;
    int32 topicCount = 2;
    int32 elapsedTime = 3;
}

message ConsumeRequest {
    string topic = 1;
}
